test/pass/pass23.pl2014
DECLARATION OF testdec
  CONST test = 1, test = 5;
  VAR fish : blinky;
  TYPE blob : ARRAY hip[23..22] OF fish;
  PROCEDURE hahaha ( werw; yyt; werr)
DECLARATION END
